bugfix #3217: Tooltips broken on experiment page after moving to wro4j bundles  (tooltip styles moved to atlas.css)

--- a/atlas-web/src/main/webapp/atlas.css
+++ b/atlas-web/src/main/webapp/atlas.css
@@ -272,8 +272,38 @@ padding: 0;
     text-decoration: underline;
 }
 
-/* unsorted */
+/* tooltips */
 
+.tooltip {
+    position: absolute;
+    z-index: 3001;
+    padding: 10px;
+    max-width: 800px;
+    border: 1px solid #5E9E9E;
+    background-color: #EEF5F5;
+}
+
+.tooltip em {
+    font: inherit;
+    background-color: yellow;
+    text-decoration: inherit;
+}
+
+.tooltip .genename {
+    margin-bottom: 10px;
+    font-size: 10px;
+}
+
+.tooltip .genename b {
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.tooltip div {
+    margin-bottom: 5px;
+}
+
+/* unsorted */
 
 .nowrap {
     white-space: nowrap;
